--- a/app/src/main/res/layout/activity_expense_view.xml
+++ b/app/src/main/res/layout/activity_expense_view.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:padding="15sp"
-        android:layout_marginTop="30sp">
+        android:layout_marginTop="15sp">
         <TextView
             android:id="@+id/titleExpView"
             android:layout_width="wrap_content"
@@ -25,7 +25,7 @@
 
     <ListView
         android:layout_below="@+id/titleTop"
-        android:layout_marginTop="20sp"
+        android:layout_marginTop="5sp"
         android:id="@+id/listViewExp"
         android:layout_width="match_parent"
         android:layout_height="420sp"
@@ -62,7 +62,8 @@
         android:layout_marginHorizontal="20sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/toggleColor">
+        android:layout_below="@id/toggleColor"
+        android:layout_centerHorizontal="true">
         <TableRow>
             <TextView
                 android:id="@+id/ShowBy"
@@ -77,7 +78,7 @@
                 />
             <EditText
                 android:id="@+id/dateSort"
-                android:layout_width="150sp"
+                android:layout_width="130sp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10sp"
                 android:hint="@string/date_of_expense"
@@ -91,8 +92,22 @@
                 android:layout_marginTop="11sp"
                 android:text="Sort"
                 android:textColor="@color/black"
+                android:textSize="13sp"
                 android:backgroundTint="@color/white"
                 android:onClick="populateListDate"
+                />
+        </TableRow>
+        <TableRow>
+            <Button
+                android:id="@+id/ButtonDefault"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Clear"
+                android:layout_column="3"
+                android:textColor="@color/black"
+                android:textSize="13sp"
+                android:backgroundTint="@color/white"
+                android:onClick="defaultList"
                 />
         </TableRow>
     </TableLayout>
